# fortran-unit-testing

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .vale.ini  1-what-is-a-unit-tests.html  1-what-is-a-unit-tests.md  2-refactor-fortran.html  2-refactor-fortran.md  3-writing-your-first-unit-test.html  4-pfunit-syntax.html  4-pfunit-syntax.md  404.html  5-integrating-with-build-systems.html  5-integrating-with-build-systems.md  6-testing-parallel-code.html  CITATION.cff  CODE_OF_CONDUCT.html  LICENSE.html  LICENSE.md  README.md  aio.html  citation.html  config.yaml  fortitude.toml  images.html  index.html  index.md  instructor-notes.html  key-points.html  md5sum.txt  pkgdown.yml  profiles.html  reference.html  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: README.md  linting.yaml  test-exercises.yaml
docker-tests/: Dockerfile.01  Dockerfile.02  Dockerfile.03  Dockerfile.04  Dockerfile.05  Dockerfile.06  Dockerfile.ep-2  Dockerfile.ep-3
episodes/: 1-what-is-a-unit-tests.md  2-refactor-fortran.md  3-writing-your-first-unit-test.md  4-pfunit-syntax.md  5-debugging-a-broken-test.md  5-integrating-with-build-systems.md  6-testing-parallel-code.md  7-syntax-of-other-frameworks.md  plan.md
exercises/: README.md
exercises/1-into-to-unit-tests/challenge/: CMakeLists.txt  README.md
exercises/1-into-to-unit-tests/challenge/src/: maths.f90
exercises/1-into-to-unit-tests/challenge/test/: test_maths.f90
exercises/1-into-to-unit-tests/solution/: README.md  test_maths_solution.f90
exercises/2-refactoring-fortran/challenge/: CMakeLists.txt  README.md
exercises/2-refactoring-fortran/challenge/src/: game_of_life.f90
exercises/2-refactoring-fortran/solution/: CMakeLists.txt  README.md
exercises/2-refactoring-fortran/solution/src/: game_of_life.f90
exercises/3-writing-your-first-unit-test/challenge/: CMakeLists.txt  Makefile  README.md
exercises/3-writing-your-first-unit-test/challenge/src/: temp_conversions.f90
exercises/3-writing-your-first-unit-test/challenge/test/: CMakeLists.txt
exercises/3-writing-your-first-unit-test/challenge/test/pfunit/: .gitignore  test_temp_conversions.pf
exercises/3-writing-your-first-unit-test/challenge/test/standard_fortran/: CMakeLists.txt  Makefile  test_temp_conversions.f90
exercises/3-writing-your-first-unit-test/solution/: README.md
exercises/3-writing-your-first-unit-test/solution/pfunit/: CMakeLists.txt  Makefile  test_temp_conversions.pf
exercises/3-writing-your-first-unit-test/solution/standard_fortran/: test_temp_conversions.f90
exercises/4-fortran-unit-test-syntax/challenge/: .gitignore  CMakeLists.txt  README.md
exercises/4-fortran-unit-test-syntax/challenge/src/: animation.f90  io.f90
exercises/4-fortran-unit-test-syntax/challenge/test/: CMakeLists.txt  test_check_for_steady_state.pf  test_read_model_from_file.pf
exercises/4-fortran-unit-test-syntax/solution/: README.md
exercises/4-fortran-unit-test-syntax/solution/src/: main.f90
exercises/4-fortran-unit-test-syntax/solution/test/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_find_steady_state.pf  test_read_model_from_file.pf
exercises/5-debugging-a-failing-test/challenge/: CMakeLists.txt  README.md
exercises/5-debugging-a-failing-test/challenge/src/: matrix_transforms.f90
exercises/5-debugging-a-failing-test/challenge/test/: CMakeLists.txt  test_transpose.pf
exercises/5-debugging-a-failing-test/solution/: README.md
exercises/6-testing-parallel-code/challenge/: CMakeLists.txt  Makefile  README.md
exercises/6-testing-parallel-code/challenge/src/: cli.f90  comms.f90  game_of_life.f90  io.f90  main.f90
exercises/6-testing-parallel-code/challenge/test/: .gitignore  CMakeLists.txt  Makefile  test_check_for_steady_state.pf  test_find_steady_state.pf  test_get_local_grid_info.pf  test_read_model_from_file.pf
exercises/6-testing-parallel-code/solution/: README.md  test_exchange_boundaries.pf  test_find_steady_state.pf
instructor/: 1-what-is-a-unit-tests.html  2-refactor-fortran.html  3-writing-your-first-unit-test.html  4-pfunit-syntax.html  404.html  5-integrating-with-build-systems.html  6-testing-parallel-code.html  CODE_OF_CONDUCT.html  LICENSE.html  aio.html  citation.html  images.html  index.html  instructor-notes.html  key-points.html  profiles.html  reference.html
learners/: setup.md
profiles/: learner-profiles.md
scripts/: build-pfunit.sh
